--- a/index.html
+++ b/index.html
@@ -53,8 +53,10 @@
       </symbol>
     </svg><!-- endinject -->
   </div>
+
   <div id="root"></div>
-  <script src="/bundle.js"></script>
+
+  <script src="./bundle.js"></script>
 </body>
 
 
